@@ -82,13 +82,36 @@ public class PipeliningTest extends Assert {
         assertEquals("foo", zset.get().iterator().next());
         assertEquals("foo", set.get());
         assertEquals(false, blist.get());
-        assertEquals(new Double(2), zincrby.get());
-        assertEquals(new Long(1), zcard.get());
+        assertEquals(Double.valueOf(2), zincrby.get());
+        assertEquals(Long.valueOf(1), zcard.get());
         assertEquals(1, lrange.get().size());
         assertNotNull(hgetAll.get().get("foo"));
         assertEquals(1, smembers.get().size());
         assertEquals(1, zrangeWithScores.get().size());
     }
+    
+    @Test
+    public void pipelineResponseWithData() {
+        jedis.zadd("zset", 1, "foo");
+        
+        Pipeline p = jedis.pipelined();
+        Response<Double> score = p.zscore("zset", "foo");
+        p.sync();
+
+        assertNotNull(score.get());    
+    }
+    
+    @Test
+    public void pipelineResponseWithoutData() {
+        jedis.zadd("zset", 1, "foo");
+        
+        Pipeline p = jedis.pipelined();
+        Response<Double> score = p.zscore("zset", "bar");
+        p.sync();
+
+        assertNull(score.get());
+    }
+
 
     @Test(expected = JedisDataException.class)
     public void pipelineResponseWithinPipeline() {
