@@ -1,38 +1,54 @@
 package redis.clients.jedis.tests;
 
-import org.junit.Before;
-import org.junit.Test;
-import redis.clients.jedis.*;
-import redis.clients.jedis.exceptions.JedisDataException;
-
-import java.io.UnsupportedEncodingException;
-import java.util.*;
-
 import static junit.framework.Assert.assertEquals;
 import static junit.framework.Assert.assertNull;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 
-public class SharedJedisPipelineTest {
-    private static HostAndPortUtil.HostAndPort redis1 = HostAndPortUtil.getRedisServers()
-            .get(0);
-    private static HostAndPortUtil.HostAndPort redis2 = HostAndPortUtil.getRedisServers()
-            .get(1);
+import java.io.UnsupportedEncodingException;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.UUID;
+
+import org.junit.Before;
+import org.junit.Test;
+
+import redis.clients.jedis.Jedis;
+import redis.clients.jedis.JedisShardInfo;
+import redis.clients.jedis.Response;
+import redis.clients.jedis.ShardedJedis;
+import redis.clients.jedis.ShardedJedisPipeline;
+import redis.clients.jedis.Tuple;
+import redis.clients.jedis.exceptions.JedisDataException;
+
+public class ShardedJedisPipelineTest {
+    private static HostAndPortUtil.HostAndPort redis1 = HostAndPortUtil
+            .getRedisServers().get(0);
+    private static HostAndPortUtil.HostAndPort redis2 = HostAndPortUtil
+            .getRedisServers().get(1);
 
     private ShardedJedis jedis;
 
     @Before
     public void setUp() throws Exception {
         Jedis jedis = new Jedis(redis1.host, redis1.port);
+        jedis.auth("foobared");
         jedis.flushAll();
         jedis.disconnect();
         jedis = new Jedis(redis2.host, redis2.port);
+        jedis.auth("foobared");
         jedis.flushAll();
         jedis.disconnect();
 
+        JedisShardInfo shardInfo1 = new JedisShardInfo(redis1.host, redis1.port);
+        JedisShardInfo shardInfo2 = new JedisShardInfo(redis2.host, redis2.port);
+        shardInfo1.setPassword("foobared");
+        shardInfo2.setPassword("foobared");
         List<JedisShardInfo> shards = new ArrayList<JedisShardInfo>();
-        shards.add(new JedisShardInfo(redis1.host, redis1.port));
-        shards.add(new JedisShardInfo(redis2.host, redis2.port));
+        shards.add(shardInfo1);
+        shards.add(shardInfo2);
         this.jedis = new ShardedJedis(shards);
     }
 
@@ -46,7 +62,6 @@ public class SharedJedisPipelineTest {
         assertEquals(2, results.size());
         assertEquals("OK", results.get(0));
         assertEquals("bar", results.get(1));
-
     }
 
     @Test
@@ -81,8 +96,8 @@ public class SharedJedisPipelineTest {
         assertEquals("foo", zset.get().iterator().next());
         assertEquals("foo", set.get());
         assertFalse(blist.get());
-        assertEquals(new Double(2), zincrby.get());
-        assertEquals(new Long(1), zcard.get());
+        assertEquals(Double.valueOf(2), zincrby.get());
+        assertEquals(Long.valueOf(1), zcard.get());
         assertEquals(1, lrange.get().size());
         assertNotNull(hgetAll.get().get("foo"));
         assertEquals(1, smembers.get().size());
